--- a/ArgoManager.csproj
+++ b/ArgoManager.csproj
@@ -9,6 +9,7 @@
         <PackageReference Include="Docker.DotNet" Version="3.125.2" />
         <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
     </ItemGroup>
 
 </Project>
